# amazon-product-api

./: README.md  pyproject.toml
amazon_buddy/: __init__.py  cli.py  constants.py  scraper.py
tests/: test_output_names.py
