[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "amazon-buddy"
version = "2.2.44"
description = "Amazon scraper for products, reviews, ASIN details, countries, and categories"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["beautifulsoup4>=4.12"]
license = {text = "MIT"}

[project.scripts]
amazon-buddy = "amazon_buddy.cli:main"
